# Blog-Platform

./: .env.example  .gitignore  BlogPlatform.slnx  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: cffa2cb7a79c_init.py
app/: config.py  database.py  dependencies.py  main.py
app/core/: jwt.py
app/models/: __init__.py  base.py  comment.py  post.py  user.py
app/repositories/: __init__.py  comment_repository.py  post_repository.py  user_repository.py
app/router/: __init__.py  auth.py  comment.py  post.py
app/schemas/: __init__.py  comment.py  post.py  user.py
app/services/: __init__.py  auth_service.py  comment_service.py  post_service.py
src/BlogPlatform.API/: BlogPlatform.API.csproj  BlogPlatform.API.http  Program.cs  appsettings.json
src/BlogPlatform.API/Controller/: AuthController.cs  BlogController.cs  CommentController.cs
src/BlogPlatform.API/Properties/: launchSettings.json
src/BlogPlatform.Application/: BlogPlatform.Application.csproj  Class1.cs
src/BlogPlatform.Application/Common/: ApiResponse.cs
src/BlogPlatform.Application/Interfaces/: IAuthRepository.cs  IBlogRepository.cs  ICommentRepository.cs  IJwtGenerator.cs  IPasswordHasher.cs  (+1 more)
src/BlogPlatform.Domain/: Class1.cs
src/BlogPlatform.Infrastructure/: BlogPlatform.Infrastructure.csproj  Class1.cs
tests/: conftest.py  factories.py  test_auth.py  test_comments.py  test_posts.py
tests/BlogPlatform.IntegrationTests/: BlogPlatform.IntegrationTests.csproj  UnitTest1.cs
tests/BlogPlatform.Tests/: BlogPlatform.Tests.csproj  UnitTest1.cs
(+42 files in other folders)
