[project]
name = "blog-platform"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "sqlalchemy[asyncio] (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "greenlet (>=3.5.0,<4.0.0)",
]

[tool.poetry]
name = "blog-platform"
version = "0.1.0"
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "faker (>=40.15.0,<41.0.0)",
    "testcontainers (>=4.14.2,<5.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
    "mypy (>=1.20.2,<2.0.0)"
]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["F401"]